
plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.6'
    id 'io.spring.dependency-management' version '1.1.0'
}


group 'innkeeper.run'
version '1.0'
sourceCompatibility = '19'

repositories {
    mavenCentral()
}

ext {
    set('springBootAdminVersion', "3.0.3")
}

dependencies {
    implementation group: 'io.fabric8', name: 'kubernetes-client', version: '6.5.1'
    implementation 'io.fabric8:crd-generator-apt:6.5.1'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
    implementation 'com.puppycrawl.tools:checkstyle:8.30'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    annotationProcessor 'io.fabric8:crd-generator-apt:6.5.1'
    implementation group: 'me.snowdrop', name: 'istio-client', version: '1.7.7.1'
    implementation  'io.javaoperatorsdk:operator-framework:4.2.8'
    implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
    implementation 'ch.qos.logback:logback-classic:1.4.6'
    implementation 'com.github.java-json-tools:json-patch:1.13'
    implementation 'org.glassfish:javax.json:1.1.4'


}

dependencyManagement {
    imports {
        mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
    }
}

test {
    useJUnitPlatform()
}